<resources>

    <string-array name="college_names">
        <item>Manipal Institute of Technology</item>
        <item>Department of European Studies</item>
        <item>Department of Atomic and Molecular Physics</item>
        <item>Department of Commerce</item>
        <item>Department of Geopolitics &amp; International Relations</item>
        <item>Department of Library &amp; Information Science</item>
        <item>Department of Public Health</item>
        <item>Department of Sciences</item>
        <item>Department of Statistics</item>
        <item>Department of Virus Research</item>
        <item>Faculty of Architecture</item>
        <item>Gandhian Centre for Philosophical Arts and Sciences</item>
        <item>International Centre for Applied Sciences</item>
        <item>Kasturba Medical College, Mangalore</item>
        <item>Kasturba Medical College, Manipal</item>
        <item>Manipal Centre for Humanities</item>
        <item>Manipal Centre for Natural Sciences</item>
        <item>Manipal College of Dental Sciences, Mangalore</item>
        <item>Manipal College of Pharmaceutical Sciences</item>
        <item>Manipal College of Dental Sciences, Manipal</item>
        <item>Manipal College of Nursing, Manipal</item>
        <item>Manipal ProLearn</item>
        <item>Melaka Manipal Medical College, Manipal</item>
        <item>School of Allied Health Sciences</item>
        <item>School of Communication</item>
        <item>School of Information Science</item>
        <item>School of Life Sciences</item>
        <item>School of Management</item>
        <item>School of Regenerative Medicine</item>
        <item>Welcomgroup Graduate School of Hotel Administration</item>
        <item>Other College</item>
    </string-array>

    <string name="app_name">Revels\' 19</string>
    <string name="home">Home</string>
    <string name="bottom_nav_schedule">Schedule</string>
    <string name="bottom_nav_categories">Categories</string>
    <string name="bottom_nav_revels_cup">Revels Cup</string>
    <string name="bottom_nav_results">Results</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_team_member">Add Team member</string>
    <string name="scan_qr_code_2">Scan Delegate QR</string>
    <string name="reset">Reset</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_workshops">Workshops</string>
    <string name="menu_proshow_portal">ProShow Portal</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_developers">Developers</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_search">Search</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_refresh">Refresh</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="about_us">About Us</string>
    <string name="developers">Developers</string>
    <string name="workshops">Workshops</string>
    <string name="about_us_details">
        Greetings!\n
    Today\'s generation is one that settles for nothing but the best. The avenues for success for this
    resilient and driven youth are endless. With this in mind, we present to you Revels\'19—Excelsior: A Quest for Excellence.\n

    Revels, MIT Manipal\'s annual Cultural and Sports festival, is an arena for a complete sense of
    holistic learning— a space for talents to delve deeper into everything from sports to the fine arts.\n

    Excelsior, meaning \'onward\’ and \‘upward,\’ complements the logo—the Phoenix, a mythological
    creature that burns completely and is reborn from its ashes. Revels\’19 will stand for the sublime
    art of achieving excellence and climbing to greater heights.\n

    Join us this March, from the 6th to the 9th, for what promises to be the best four days of your life!\n

    Regards,\n
    Team Revels\n
    </string>
    <string name="facebook_logo">facebook_logo</string>
    <string name="no_data_available">No data available</string>
    <string name="revels_19_logo">Revels 19 logo</string>
    <string name="pre_revels">Pre Revels</string>
    <string name="filter_events">Filter</string>
    <string name="clear_filters">CLEAR FILTERS</string>
    <string name="select_category">Category :</string>
    <string name="select_event_type">Event Type :</string>
    <string name="select_start_time">Start Time :</string>
    <string name="default_start_time">12:00 PM</string>
    <string name="select_end_time">End Time :</string>
    <string name="default_end_time">11:00 PM</string>
    <string name="select_event_venue">Venue :</string>
    <string name="apply_filter">APPLY</string>
    <string name="no_data">No Data</string>
    <string name="no_events_available">No events Available</string>
    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="day_3">Day 3</string>
    <string name="day_4">Day 4</string>
    <string name="about_category">About category</string>
    <string name="event_fragment">Events</string>
    <string name="more">MORE</string>
    <string name="no_events2">No Events Available</string>
    <string name="categories">Categories</string>
    <string name="no_categories">No Categories Available</string>
    <string name="results">Results</string>
    <string name="home_revels_live_title">Liveblog by The MIT Post</string>
    <string name="unable_to_load_revels_live">Stay tuned for live coverage. Swipe down to refresh!</string>
    <string name="no_connection">No connection</string>
    <string name="no_results">No Results available!</string>
    <string name="email2">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_as_guest">Continue as Guest</string>
    <string name="sign_up">Sign up</string>
    <string name="no_connection_text">Please connect to the internet and retry</string>
    <string name="retry">Retry</string>
    <string name="action_search">Search</string>
    <string name="drawer_favourites">Favourites</string>
    <string name="team_position">0</string>
    <string name="no_results_2">The results are not out yet</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="clear">CLEAR</string>
    <string name="no_favourites">No Favourites</string>
    <string name="action_delete_all">Delete All</string>
    <string name="revels_cup">Revels Cup</string>
    <string name="revels19">Revels19</string>
    <string name="revels19_on_the_mit_post">Revels19 on The MIT Post</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="registration_hint">Registration Number/Faculty ID</string>
    <string name="referral">Referral code (Optional)</string>
    <string name="delegate_id">Delegate ID :</string>
    <string name="registration_number">Registration No :</string>
    <string name="phone">Phone :</string>
    <string name="email">Email ID :</string>
    <string name="college">College :</string>
    <string name="delegate_qr">Delegate QR :</string>
    <string name="event_registrations">Event Registration</string>
    <string name="event_name">Event Name</string>
    <string name="team_id">Team ID</string>
    <string name="no_events">No Events</string>
    <string name="logout">Logout</string>
</resources>
