<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/action_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/schedule" />
    <item
        android:id="@+id/action_categories"
        android:icon="@drawable/ic_categories"
        android:title="@string/categories" />
    <item
        android:id="@+id/action_revels_cup"
        android:icon="@drawable/ic_revels_cup"
        android:title="@string/revels_cup" />
    <item
        android:id="@+id/action_results"
        android:icon="@drawable/ic_results"
        android:title="@string/results" />
</menu>