<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_workshops"
        android:orderInCategory="3"
        android:title="@string/menu_workshops"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_proshow_portal"
        android:orderInCategory="4"
        android:title="@string/menu_proshow_portal"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about_us"
        android:orderInCategory="5"
        android:title="@string/menu_about_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_developers"
        android:orderInCategory="6"
        android:title="@string/menu_developers"
        app:showAsAction="never" />

</menu>