<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/padding_default">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_2x"
        android:text="@string/no_connection"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:alpha="0.54"
        app:srcCompat="@drawable/ic_connection_error_24px" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_default"
        android:gravity="center"
        android:text="@string/no_connection_text"
        android:textSize="@dimen/typography_title" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <Button
            android:id="@+id/retry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:text="@string/retry" />

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>